--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 
 body {
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 
 body * {
@@ -144,4 +145,14 @@ body * {
     padding: 24px;
     text-align: center;
     font-size: 14px;
+ }
+
+ /* media queries*/
+ @media (min-width: 700px) {
+   :root{
+    --bg-url: url(./images/bg-desktop.jpg);
+   }
+   .light {
+      --bg-url: url(./images/bg-desktop-light.jpg);
+   }
  }
