--- a/style.css
+++ b/style.css
@@ -71,11 +71,18 @@ body * {
     left: 0; 
     z-index: 1;
     transform: translateY(-50%);
+
+    animation: slide-back .2s;
  }
 
+ #switch button:hover {
+   outline: 8px solid var(--highlight-color);
+ }
+
+ 
+/* ajustes da keyframe */
  .light #switch button {
-    right: 0;
-    left: initial;
+   animation: slide-in 0.4s forwards;
  }
 
  #switch span {
@@ -154,5 +161,23 @@ body * {
    }
    .light {
       --bg-url: url(./images/bg-desktop-light.jpg);
+   }
+ }
+ /* animation */
+ /* função e nome escolhido */
+ @keyframes slide-in {
+   from {
+      left: 0;
+   }
+   to {
+      left: 50%;
+   }
+ }
+ @keyframes slide-back {
+   from {
+      left: 50%;
+   }
+   to {
+      left: 0;
    }
  }
